<resources>
    <!-- Name for the application -->
    <string name="app_name">BookstoreApp</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all books data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title text for the empty view, which describes the empty bookshelf image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Add some books to the empty stock...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book or ALL books [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book or ALL books [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting ALL books [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all books?</string>

    <!-- Toast message in editor when ALL current books are successfully deleted [CHAR LIMIT=NONE] -->
    <string name="delete_all_books_successful">All Books deleted</string>

    <!-- Label for book info category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_info">Book Info</string>

    <!-- Label for supplier category in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_info">Supplier Info</string>

    <!-- Label for category class of the book in the editor [CHAR LIMIT=30] -->
    <string name="category_class">Category</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_genre">Genre</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone Number</string>

    <!-- Text hint for genre field in the editor [CHAR LIMIT=30] -->
    <string name="hint_genre">Genre</string>

    <!-- Price of book, in US Dollars (kilograms) [CHAR LIMIT=5] -->
    <string name="price_in_US_dollars">USD</string>

    <!-- Label for dropdown menu option if the book's category is unknown [CHAR LIMIT=10] -->
    <string name="category_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the book is fiction [CHAR LIMIT=10] -->
    <string name="category_fiction">Fiction</string>

    <!-- Label for dropdown menu option if the book is nonfiction [CHAR LIMIT=10] -->
    <string name="category_nonfiction">NonFiction</string>

    <!-- Label for the book's price if it's not yet assigned [CHAR LIMIT=NONE] -->
    <string name="unknown_price">Price not determined at this time.</string>

    <!-- Minus symbol for decreasing quantity of books [CHAR LIMIT=NONE] -->
    <string name="decrease">-</string>

    <!-- Plus symbol for increasing quantity of books [CHAR LIMIT=NONE] -->
    <string name="increase">+</string>

    <!-- Text for Contact Supplier button to call supplier phone number to order book [CHAR LIMIT=NONE] -->
    <string name="contact_supplier">Contact Supplier</string>

    <!-- Text for Remove button deletes book from database [CHAR LIMIT=NONE] -->
    <string name="delete_from_inventory">Delete from Stock</string>

    <!-- Text for Sale button [CHAR LIMIT=NONE] -->
    <string name="sale_button">Sale</string>

    <!-- Toast message that prompts the user to add a product name when Empty [CHAR LIMIT=NONE] -->
    <string name="name_required">Product name required</string>

    <!-- Toast message that prompts the user to add a price when Empty [CHAR LIMIT=NONE] -->
    <string name="price_required">Price required</string>

    <!-- Toast message that prompts the user to add a quantity when Empty [CHAR LIMIT=NONE] -->
    <string name="quantity_required">Quantity required</string>

    <!-- Toast message that prompts the user to add a supplier name when Empty [CHAR LIMIT=NONE] -->
    <string name="supplier_required">Supplier name required</string>

    <!-- Toast message that prompts the user to add a supplier phone number when Empty [CHAR LIMIT=NONE] -->
    <string name="phone_required">Supplier phone required</string>

    <!-- Toast message that prompts the user to add a genre when Empty [CHAR LIMIT=NONE] -->
    <string name="genre_required">Genre required</string>
</resources>
